part1/1_11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-main-app-1-11-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app-1-11
  ports:
    - name: main-app
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: pingpong
      port: 2346
      protocol: TCP
      targetPort: 3001
